- Fix hover styling for social media links on Edge - Add IE & Edge support for generating hamburger menu on mobile view

--- a/src/themes/scania/c-footer.scss
+++ b/src/themes/scania/c-footer.scss
@@ -236,7 +236,16 @@ p {
   }
 }
 
+// handling for hover styling in IE and Edge (should target social-media a:hover)
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  ::slotted(c-social-media a:hover) {
+    background-color: white;
+    color: black;
+    border-color: white;
+    border-radius: 22px;
+  }
+}
+@supports (-ms-ime-align:auto) {
   ::slotted(c-social-media a:hover) {
     background-color: white;
     color: black;
